[DLAB-480]: fixed action buttons overlapping in case of not selected hours

--- a/services/self-service/src/main/resources/webapp/src/app/resources/scheduler/scheduler.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/resources/scheduler/scheduler.component.scss
@@ -86,6 +86,14 @@
       visibility: hidden;
       text-align: left;
     }
+    .row-wrap {
+      position: relative;
+      .error {
+        position: absolute;
+        bottom: -10px;
+        font-size: 12px;
+      }
+    }
   }
   .col-3 {
     width: 33%;
